--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-i18next": "^14.0.5",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
